--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -15,6 +15,8 @@ RUN deno cache main.ts
 # Expose the port your server uses
 EXPOSE 3001
 
+ENV PORT=3001
+
 # Run the server with necessary permissions
 #CMD ["deno", "run", "--allow-net", "--allow-env", "--allow-read", "main.ts"]
 CMD ["deno", "run", "--watch" ,"-A", "main.ts"]
