--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,28 +1,30 @@
-FROM denoland/deno:latest
+# Use a base image with both Node.js and install Deno
+FROM node:20-alpine
+
+# Install Deno
+RUN apk add --no-cache curl unzip
+RUN curl -fsSL https://deno.land/install.sh | sh
+ENV DENO_INSTALL="/root/.deno"
+ENV PATH="$DENO_INSTALL/bin:$PATH"
 
 # Set working directory
 WORKDIR /app
 
-# Copy dependency/config files first (for better caching)
-COPY deno.lock* ./
-COPY package.json ./
+# Copy package files first (for caching)
+COPY package.json package-lock.json* ./
 
-RUN deno install
+# Install Node dependencies (needed for Next.js build)
+RUN npm install
+
 # Copy all source files
 COPY . .
-
-# Cache dependencies
-RUN deno cache --node-modules-dir npm:next@16.0.10
-RUN deno cache --node-modules-dir npm:react@19.2.1
-RUN deno cache --node-modules-dir npm:react-dom@19.2.1
-RUN deno cache --node-modules-dir npm:socket.io-client@^4.8.1
 
 # Set build-time environment variable
 ARG NEXT_PUBLIC_SERVER_URL
 ENV NEXT_PUBLIC_SERVER_URL=$NEXT_PUBLIC_SERVER_URL
 
-# Build the Next.js application
-RUN deno task build
+# Build the Next.js application using npm (more reliable for Next.js)
+RUN npm run build
 
 # Expose port
 EXPOSE 3000
@@ -33,4 +35,4 @@ ENV NODE_ENV=production
 ENV HOSTNAME="0.0.0.0"
 
 # Start the production server
-CMD ["deno", "task", "start"]
+CMD ["npm", "run", "start"]
