--- a/server/deno.json
+++ b/server/deno.json
@@ -1,11 +1,19 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --watch -A --env main.ts",
+    "start": "deno run --allow-net --allow-env --allow-read main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
-    "cors": "npm:cors@^2.8.5",
-    "express": "npm:express@^5.2.1",
-    "socket.io": "npm:socket.io@^4.8.1"
+    "@supabase/supabase-js": "npm:@supabase/supabase-js@^2.49.1",
+    "socket.io": "npm:socket.io@^4.8.1",
+    "jsonwebtoken": "npm:jsonwebtoken@^9.0.2",
+    "uuid": "npm:uuid@^9.0.0"
+  },
+  "compilerOptions": {
+    "lib": [
+      "deno.ns",
+      "dom"
+    ]
   }
 }
